--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,6 +10,14 @@
         android:name="com.android.example.cartoleria.FirstFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first">
+        <action
+            android:id="@+id/action_FirstFragment_to_homeFragment"
+            app:destination="@+id/navigation_home" />
     </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.android.example.cartoleria.ui.home.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" />
 
 </navigation>
